--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">timesAPP</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_rotation">RotationActivity</string>
+
+    <string name="hello_world">Rotation done here!</string>
+    <string name="title_activity_rtation">RotationActivity</string>
 </resources>
