Added RotationActivity2  with the code from http://www.codeproject.com/Articles/729759/Android-Sensor-Fusion-Tutorial. I have not added code to extract the angle from the matrix.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="hello_world">Rotation done here!</string>
     <string name="title_activity_rtation">RotationActivity</string>
+    <string name="title_activity_rotation_activity2">RotationActivity2</string>
 </resources>
