Bara gyro funkar skitbra :D

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="hello_world">Rotation done here!</string>
     <string name="title_activity_rtation">RotationActivity</string>
     <string name="title_activity_rotation_activity2">RotationActivity2</string>
+    <string name="title_activity_gyro_rotation">GyroRotationActivity</string>
 </resources>
